# wikinews

./: .coverage  .gitignore  README.md  _config.yml  download_golden_html.py  fetch_source_html.py  fetch_wikipedia_pages.py  generate_golden_files.py  pyproject.toml  pytest.ini  test.html  test_golden_html_processing.py  test_markitdown_conversion.py  test_wikipedia_news_downloader.py  uv.toml  wikinews.code-workspace  wikipedia-news-downloader.py  wikipedia_news_downloader.py
.github/workflows/: codeql.yml  defender-for-devops.yml  devskim.yml  ossar.yml  osv-scanner-pr.yml  osv-scanner-push.yml  osv-scanner.yml  pyre.yml  pytest.yml  python-app.yml  ruff.yml  type_check.yml  wikipedia-news-daily.yml  wikipedia-news-weekly.yml  wikipedia-news.yml
_posts/: 2025-01-05.md  2025-01-06.md  2025-01-07.md  2025-01-08.md  2025-01-09.md  2025-01-11.md  2025-01-14.md  2025-01-15.md  2025-01-16.md  2025-01-20.md  2025-01-21.md  2025-01-22.md  2025-01-23.md  2025-01-24.md  2025-01-25.md
docs/: 2025-01-01.md  2025-01-02.md  2025-01-03.md  2025-01-04.md  2025-01-05.md  2025-01-06.md  2025-01-07.md  2025-01-08.md  2025-01-09.md  2025-01-10.md  2025-01-11.md  2025-01-12.md  2025-01-13.md  2025-01-14.md  2025-01-15.md  2025-01-16.md  2025-01-17.md  2025-01-18.md  2025-01-19.md  2025-01-20.md  2025-01-21.md  2025-01-22.md  2025-01-23.md  2025-01-24.md  2025-01-25.md  2025-01-26.md  _config.yml  index.html  index.md
docs/_layouts/: home.html  post.html
docs/_posts/: 2020-12-20-index.md  2025-01-01-index.md  2025-01-02-index.md  2025-01-03-index.md  2025-01-04-index.md  2025-01-05-index.md  2025-01-06-index.md  2025-01-07-index.md  2025-01-08-index.md  2025-01-09-index.md  2025-01-10-index.md  2025-01-11-index.md  2025-01-12-index.md  2025-01-13-index.md  2025-01-14-index.md  2025-01-15-index.md  2025-01-16-index.md  2025-01-17-index.md  2025-01-18-index.md  2025-01-18.md  2025-01-19-index.md  2025-01-20-index.md  2025-01-21-index.md  2025-01-22-index.md  2025-01-23-index.md  2025-01-24-index.md  2025-01-25-index.md  2025-01-26-index.md  2025-01-27-index.md  2025-01-28-index.md  2025-01-29-index.md  2025-01-30-index.md  2025-01-31-index.md  2025-02-01-index.md  2025-02-02-index.md  2025-02-03-index.md  2025-02-04-index.md  2025-02-05-index.md  2025-02-06-index.md  2025-02-07-index.md  (+533 more)
news/: 2025-01-01.md  2025-01-03.md  2025-01-12.md  2025-01-13.md  2025-01-19.md  2025-01-20.md  2025-01-23.md  2025-01-25.md
news/2025-01-25/: news.md
tests/golden_html_references/: february_2025.html  february_2025_reference.md  january_2025.html  january_2025_reference.md
tests/test_data/golden_output/: 2024-01-01-index.md  2024-01-02-index.md  (+58 more)
wikinews.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
wikipedia_news/: data_structures.py
(+29 files in other folders)
