[project]
name = "wikinews"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "markitdown",
]

[dependency-groups]
dev = [
    "mypy>=1.16.0",
    "pyrefly>=0.20.1",
    "pyright>=1.1.402",
    "pytest>=8.4.0",
    "pytype>=2024.10.11 ; sys_platform == 'linux'",
    "ruff>=0.11.13",
    "types-requests>=2.32.4.20250611",
]

[tool.ruff]
line-length = 140

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN001",
    "C901",
    "CPY001",
    "D",
    "DTZ001",
    "DTZ005",
    "DOC201",
    "FBT001",
    "FBT002",
    "G004",
    "PLR0912",
    "PLR0915",
    "PLR2004",
    "S101",
    "SIM108",
]

[tool.pyright]
typeCheckingMode = "strict"

[tool.mypy]
strict = "true"

[tool.uv]
python-preference = "managed"

[tool.pyrefly]
