[project]
name = "wikinews"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "markitdown",
    "urllib3",
]

[dependency-groups]
dev = [
    "mypy",
    "pyrefly",
    "pyright",
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "pytype ; sys_platform == 'linux'",
    "ruff",
    "types-requests",
]

[tool.ruff]
line-length = 140

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN401",
    "BLE001",
    "C901",
    "D",
    "DTZ001",
    "DTZ005",
    "DTZ007",
    "FBT001",
    "FBT002",
    "FBT003",
    "G004",
    "PLR0912",
    "PLR0913",
    "PLR0915",
    "PLR2004",
    "S101",
    "SIM108",
]

[tool.pyright]
typeCheckingMode = "strict"

[tool.mypy]
strict = "true"
[[tool.mypy.overrides]]
module = [
    "markitdown",
    "pytest",
    "requests"
]
ignore_missing_imports = true

[tool.uv]
python-preference = "managed"

[tool.pyrefly]

[tool.setuptools]
py-modules = ["wikipedia_news_downloader"]
